--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       <p><strong><a 
       href="https://www.linkedin.com/in/arabella-hormillada-42868420b/">linkedin</a></strong></p>
       <p>
-      <p><a href="mailto:someone@example.com">arabellahormillada@gmail.com</a></p><br>
-        416-702-4357 <br>
+      <p>arabellahormillada@gmail.com</p><br> 
+      416-702-4357 <br>
         <i>Waterloo, ON</i>
       </p>
       
