--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     }
 
     li a:hover {
-      background-color: #ADBCC3;
-      color: black;
+      color: #ADBCC3;
     }
 
     /* work with me */
@@ -79,13 +78,13 @@
   </style>
 </head>
 <body>
-  <!-- Nav Bar -->
-  <ul>
-    <li><a href="#home">home</a></li>
-    <li><a href="#contact">about</a></li>
-    <li><a href="#mywork">my work</a></li>
-    <li><a href="#aboutme">contact</a></li>
-  </ul>
+<!-- Nav Bar -->
+<ul>
+    <li><a href="https://arabella555.github.io/personal-website-homepage/">home</a></li>
+    <li><a href="https://arabella555.github.io/personal-website-about/">about</a></li>
+    <li><a href="https://arabella555.github.io/personal-website-mywork/">my work</a></li>
+    <li><a href="https://arabella555.github.io/personal-website-contact/">contact</a></li>
+</ul>
 
   <!-- Work with me section -->
   <div class="work-with-me-section">
